kubernetes/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: rook-ceph
  name: ceph-dashboard
spec:
  parentRefs:
    - namespace: kube-system
      name: cilium-default
      sectionName: https
  hostnames:
    - "ceph.timtor.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: rook-ceph-mgr-dashboard
          port: 7000
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: rook-ceph
  name: ceph-dashboard-http-redirect
spec:
  parentRefs:
    - namespace: kube-system
      name: cilium-default
      sectionName: http
  hostnames:
    - "ceph.timtor.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
